js file created

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flight Booking</title>
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <!-- Stylesheet -->
@@ -100,11 +99,13 @@
 
         <div class="booking-content">
             <h1>discover <br> around the world</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias
-                veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise
-                voluptatibus quam</p>
+            <p>Hello, there. Let us help you start your search for cheap airfare and travel deals. Whether it’s a
+                romantic weekend getaway, family vacation, bucket-list trip to your dream destination, or a business
+                trip with a side of fun, we have you covered. Finding cheap airline tickets for domestic and
+                international flights is what we do best.</p>
         </div>
         </section>
+        <script src="script.js"></script>
 
         <!--Thank You-->
 </body>
