--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <!-- Stylesheet -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -48,23 +51,26 @@
                 </div>
             </div>
             <div class="input-group f-class">
-                <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                <div style="width: 100%;">
+                    <label for="">First Class-($150)</label>
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div class="input-group number-spinner">
+                    <button id="fc-decrement" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <input id="fc-class" type="text" class="form-control text-center" value="0">
+                    <button id="fc-increment" class="btn btn-default"><i class="fas fa-plus"></i></button>
                 </div>
             </div>
 
             <div class="input-group f-class">
-                <div>
-                    <label for="">Economy Class ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                <div style="width: 100%;">
+                    <label for="">Economy Class-($100)</label>
                 </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                <div class="input-group number-spinner">
+                    <button id="eco-decrement" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                    <input id="eco-class" type="text" class="form-control text-center" value="0">
+                    <button id="eco-increment" class="btn btn-default"><i class="fas fa-plus"></i></button>
                 </div>
+
             </div>
             <div class="calculations">
                 <div class="amount">
@@ -72,7 +78,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="total-price">$00</p>
                     </div>
                 </div>
 
@@ -81,7 +87,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="tax-amount">$0</p>
                     </div>
                 </div>
                 <hr>
@@ -90,7 +96,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="total-amount">$00</p>
                     </div>
                 </div>
             </div>
